fixed the image title not visible issue

--- a/plugins/bynder-media/assets/css/bm-style.css
+++ b/plugins/bynder-media/assets/css/bm-style.css
@@ -77,7 +77,7 @@ body.bm-modal-off-scroll{overflow:hidden;}
 .bm-media-main .bm-img{height:120px;background-color:rgb(211 211 211 / 25%);}
 .bm-media-main .bm-img img{max-width:100%;display:block;-o-object-fit:contain;object-fit:contain;-o-object-position:center;object-position:center;width:100%;height:100%;}
 .bm-media-main .bm-content-wrap{padding:10px;height:calc(100% - 110px)}
-.bm-media-main .bm-content-wrap h4{margin:0 0 10px;font-size:14px;min-height:36px;word-break:break-word;color:#000}
+.bm-media-main .bm-content-wrap h4{margin:0 0 10px;font-size:14px;min-height:36px;word-break:break-word;color:#000!important}
 .bm-media-main .bm-content-wrap .bm-derivatives-section{margin:0 0 10px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:start;-ms-flex-align:start;align-items:flex-start;-ms-flex-wrap:wrap;flex-wrap:wrap;min-height:60px;}
 .wp-admin #bm-tab-media[bynder-request-by="profile_picture"] .bm-derivatives-section{display:none}
 .bm-media-main .bm-content-wrap .bm-btn-wrap{text-align:center;}
@@ -87,7 +87,7 @@ body.bm-modal-off-scroll{overflow:hidden;}
 /* cropper */
 #bm-upload-btn{display:none;}
 .bm-drag-drop-inside{width:100%;}
-.bm-drag-drop-buttons{padding:10px 0;}
+.bm-drag-drop-buttons{padding:10px 0;color: #000;}
 .bm-show-cropping-area{display:flex;justify-content:center;flex-wrap:wrap;overflow:hidden;padding:10px 0;position:relative;}
 .bm-show-cropping-area .bm-show-cropped-thumb{order:2;width:100%;}
 .bm-show-cropping-area .bm-show-cropped-canvas{order:1;margin-bottom:20px;}
@@ -153,7 +153,7 @@ a#bm-featured-remove{margin-bottom:20px;}
 .cropper-container.cropper-bg{overflow:hidden;}
 .bm-show-cropping-area .bm-btn, .bm-show-cropping-area .bm-btn-pink{color:#fff;}
 .bm-select-media.creating-popup, .bm-select-media.creating-popup *{cursor:not-allowed;}
-#bm-msg{font-family:"Arial", sans-serif;}
+#bm-msg{font-family:"Arial", sans-serif;font-size: 15px;}
 #bm-msg a{font-family:"Arial", sans-serif;}
 
 /* CSS for admin only */
